--- a/.env
+++ b/.env
@@ -8,3 +8,9 @@ SERGIO_DATA_PATH='G:\My Drive\Solar_Flares\Data\Sergio_2010_2017'
 
 SLIDED_DFS_CSV_PATH='G:\My Drive\Solar_Flares\Data\slided_dfs'
 
+GATEKEEPER_MODELS_PATH='C:\Users\Eduardo\BES\IC\Solar_Flares\src\notebooks\models\gatekeeper'
+GREAT_FILTER_MODELS_PATH='C:\Users\Eduardo\BES\IC\Solar_Flares\src\notebooks\models\great_filter'
+SPECIALIST_910_MODELS_PATH='C:\Users\Eduardo\BES\IC\Solar_Flares\src\notebooks\models\specialist_910'
+SPECIALIST_MX_MODELS_PATH='C:\Users\Eduardo\BES\IC\Solar_Flares\src\notebooks\models\specialist_MX'
+
+DASHBOARD_JSON_PATH='C:\Users\Eduardo\BES\IC\Solar_Flares\src\py_src\prediction_pipeline\dashboard_state.json'
